Sun Feb  4 02:22:59 2007  Akinori MUSHA  <knu@iDaemons.org>

	* lib/cgi.rb (CGI::QueryExtension::read_multipart): Remove a debug
	  print.

Sat Feb  3 14:32:58 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_val2olevariantdata, ole_val2variant):
	  fix the bug of WIN32OLE_VARIANT.new when variant type is 
	  VT_ARRAY.

	* ext/win32ole/sample/excel1.rb: rewrite using WIN32OLE_VARIANT.

	* test/win32ole/test_win32ole.rb: add some test.

	* test/win32ole/test_win32ole_variant.rb: ditto.

Sat Feb  3 03:35:20 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, */Makefile.sub, common.mk (vmasm): generalized.

	* common.mk (runruby, benchmark, benchmark-each, tbench): use
	  PROGRAM for the file to be built.

	* proc.c (yarv_proc_alloc): needs return.

	* call_cfunc.ci, compile.c, compile.h, debug.h, eval.c,
	  eval_error.h, eval_jump.h, eval_load.c, eval_thread.c, gc.c,
	  insnhelper.h, insns.def, iseq.c, main.c, numeric.c, parse.y,
	  range.c, ruby.h, signal.c, thread.c, thread_win32.ci, vm.c,
	  vm.h, vm_dump.c, vm_evalbody.ci, yarvcore.c, yarvcore.h:
	  fixed indents and non-C90 comments.

	* regenc.h: revert to before YARV.

	* lib/mkmf.rb (create_makefile): make object files depend on
	  extconf.h even if depend file exists.

Fri Feb  2 23:39:42 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* common.mk (bin): add more dependency.  a patch from Tadashi
	  Saito <shiba at mail2.accsnet.ne.jp>.  [ruby-dev:30245]

Fri Feb  2 18:44:31 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* insns.def (setclassvariable): remove warn argument.

Fri Feb  2 18:36:40 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* common.mk (compile.$(OBJEXT)): add config.h to vm.c and
	  compile.c.

Fri Feb  2 18:27:54 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c: remove duplicated global variables rb_cProc and
	  rb_cBinding.  [ruby-dev:30242]

Fri Feb  2 00:13:44 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
