@@ -1,16 +1,3 @@
-module Test
-  module Unit
-    module Assertions
-      # For backward compatibility
-      unless instance_methods.include?("assert_raise")
-        def assert_raise(*args, &block)
-          assert_raises(*args, &block)
-        end
-      end
-    end
-  end
-end
-
 module RSS
   module Assertions
     
