@@ -1,3 +1,8 @@
+Sun Feb  4 20:34:41 2007  Kouhei Sutou  <kou@cozmixng.org>
+
+	* test/rss/rss-assertions.rb: removed needless code for backward
+	compatibility.
+
 Sun Feb  4 02:22:59 2007  Akinori MUSHA  <knu@iDaemons.org>
 
 	* lib/cgi.rb (CGI::QueryExtension::read_multipart): Remove a debug
